...
  let kind: String = "1LimitWidget"

  var body: some WidgetConfiguration {
    StaticConfiguration(kind: kind, provider: OHLCProvider()) { entry in
      OHLCEntryView(entry: entry)
    }
    .configurationDisplayName("1Limit")
    .description("Monitor your limit orders and trading positions")
    .supportedFamilies([.systemSmall, .systemMedium, .systemLarge])
  }
}

struct OHLCEntryView: View {
...
